Tue Jul 12 01:59:10 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (GNUC_PREREQ): Helper macro borrowed from
	  glibc.
	  (ATTRIBUTE_FORMAT_PRINTF): Define to a function attribute enabling
	  printf-style format string checking if using GCC 2.0 or newer.
	  (ATTRIBUTE_SENTINEL): Use GNUC_PREREQ. Use __sentinel__ rather
	  than sentinel to avoid possible clashes with other macros.
	* lib/error.h (error): Add printf format attribute.
	* lib/xmalloc.c: Include "error.h" rather than redeclaring error.

Mon Jul 11 18:12:58 BST 2005  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Emit a debugging message.

Mon Jul 11 14:41:52 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Define ATTRIBUTE_SENTINEL to a function
	  attribute enabling sentinel checking if using GCC 4.0 or newer.
	  (strappend): Use it.
	* lib/pipeline.h (command_new_args, command_args,
	  pipeline_new_commands, pipeline_command_args, pipeline_commands):
	  Likewise.

Mon Jul 11 14:38:30 BST 2005  Colin Watson  <cjwatson@debian.org>

	* lib/Makefile.in, libdb/Makefile.in, src/Makefile.in,
	  zsoelim/Makefile.in: Stop using -I-; it's deprecated in GCC 4.0,
	  and it doesn't seem worth the effort of switching to the -iquote
	  replacement.

Mon Jul 11 12:02:57 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/man.c (usage): Fix "gditview" typo (Debian bug #317696).
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po: Unfuzzy all translations.

Fri Jul  8 13:12:29 BST 2005  Ralph Corderoy  <ralph@inputplus.co.uk>

	* src/man.c (display): Drop "Reformatting %s, please wait..."
	  message; it's been years since processing power was low enough for
	  this to be relevant.

Mon Jul  4 00:49:36 BST 2005  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (EVERYTHING, ALL): List intl before lib, since